# nasskan

./: Cargo.toml  README.md  nasskan.service
examples/: caps2esc.yaml  my-personal-config.yaml
src/: config.rs  main.rs  remapper.rs
src/config/: validation.rs
