[package]
name = "nasskan"
version = "0.1.0"
authors = ["tadosappo <tadosappo@users.noreply.github.com>"]
edition = "2018"

[dependencies]
udev = "0.2"
mio = "0.6"
env_logger = "0.7"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
lazy_static = "1.4"
evdev-rs = "0.3"
nix = "0.13.0"
maplit = "1.0"
